--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
-    <title>FRC Dashboard</title>
+    <title>2706 2018 Dashboard</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
