Added more autonomous mode buttons
More autonomous modes were added to the smart dashboard.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
 
           <div id = "auto_buttons" layout = "row" layout-align= "margin-bottom">
             <button id = "exchange_select" onclick="autonomousSelected(this.id);">Exchange</button >
-            <button id = "scale_select" onclick="autonomousSelected(this.id);">Scale</button>
-            <button id = "switch_select" onclick="autonomousSelected(this.id);">Switch</button>
+            <button id = "cscale_select" onclick="autonomousSelected(this.id);">Close Scale</button>
+            <button id = "cswitch_select" onclick="autonomousSelected(this.id);">Close Switch</button>
             <button id = "drive_select" onclick="autonomousSelected(this.id);">Just Drive</button>
+            <button id = "fswitch_select" onclick="autonomousSelected(this.id);">Far Switch</button>
+            <button id = "fscale_select" onclick="autonomousSelected(this.id);">Far Scale</button>
           </div>
         </p>
       </div>
