Added draggable auto selector to UI

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
             <p>Adjust arm height</p>
             <input id="arm-position" type="range" min="0" max="1200" value="770">
         </div>
+	<ol id="autoselector" style="margin-left:8px;">
+		<li draggable="true" class="automode">Auto Mode 1</li>
+		<li draggable="true" class="automode">Auto Mode 2</li>
+		<li draggable="true" class="automode">Auto Mode 3</li>
+		<li draggable="true" class="automode">Auto Mode 4</li>
+		<li draggable="true" class="automode">Auto Mode "Drive into hotel wall"</li>
+	</ol>
     </aside>
     <div class="greybox">
         <div id="login">
@@ -109,6 +116,7 @@
     <script src="tryIPC.js"></script>
     <script src="networktables/networktables.js"></script>
     <script src="ui.js"></script>
+    <script src="draggableList.js"></script>
 </body>
 
 </html>
