--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
             <input id="arm-position" type="range" min="0" max="1200" value="770">
         </div>
 	<ol id="autoselector" style="margin-left:8px;">
-		<li draggable="true" class="automode">Auto Mode 1</li>
-		<li draggable="true" class="automode">Auto Mode 2</li>
-		<li draggable="true" class="automode">Auto Mode 3</li>
-		<li draggable="true" class="automode">Auto Mode 4</li>
-		<li draggable="true" class="automode">Auto Mode "Drive into hotel wall"</li>
+		<li draggable="true" id = "1" class="automode">Auto Mode 1</li>
+		<li draggable="true" id = "2" class="automode">Auto Mode 2</li>
+		<li draggable="true" id = "3" class="automode">Auto Mode 3</li>
+		<li draggable="true" id = "4" class="automode">Auto Mode 4</li>
+		<li draggable="true" id = "hotel" class="automode">Auto Mode "Drive into hotel wall"</li>
 	</ol>
     </aside>
     <div class="greybox">
