--- a/index.html
+++ b/index.html
@@ -69,11 +69,8 @@
         </div>
 
         <ol id="autoselector" style="margin-left:8px;">
-            <li draggable="true" id="1" class="automode">Auto Mode 1</li>
-            <li draggable="true" id="2" class="automode">Auto Mode 2</li>
-            <li draggable="true" id="3" class="automode">Auto Mode 3</li>
-            <li draggable="true" id="4" class="automode">Auto Mode 4</li>
-            <li draggable="true" id="hotel_wall_get_rekt" class="automode">Drive into hotel wall.</li>
+            <li draggable="true" id="1" class="automode">Sample Auto Mode 1</li>
+            <li draggable="true" id="2" class="automode">Sample Auto Mode 2</li>
         </ol>
 
         <form onChange = "updateSelectedSide();"> Start Position <br />
